# macvi-usv-odce-toolkit

./: LICENSE.txt  README.md  macvi_usv_odce_tool.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
macvi_usv_odce_toolkit/: __init__.py  __main__.py  danger_zone_mask.py  dataset.py  evaluation.py  sea_edge_mask.py  utils.py
tests/: conftest.py  reference-evaluation-results.json  test_basic.py  test_cmd_evaluate.py  test_cmd_prepare_submission.py
