[tool.yapf]
indent_width = 4
column_limit = 120
dedent_closing_brackets = true
spaces_before_comment = "2"
space_between_ending_comma_and_closing_bracket = 0
coalesce_brackets = true
blank_line_before_nested_class_or_def = false

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
