[options]
python_requires = >=3.6
install_requires =
    opencv-python-headless
    numpy
    pycocotools

[options.entry_points]
console_scripts =
	macvi-usv-odce-tool = macvi_usv_odce_toolkit.__main__:main

[flake8]
extend-ignore =
show-source = False
max-line-length = 120

[tool:pytest]
filterwarnings =
    # Ignore DeprecationWarnings in numpy, triggered by pycocotools. We have no control over that.
    ignore:`np.float` is a deprecated alias:DeprecationWarning:pycocotools.cocoeval:

addopts = "-v" "-rA" "--log-level" "INFO"
